Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19
Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: rB77d23b0bd76f
Worked: Not in 2.81, not sure about 2.79.
Short description of error
Objects which have their display type as wired are being rendered as solid when using the "Viewport render image" feature if the viewport's shading type is "Rendered".
Exact steps for others to reproduce the error
- Add an object;
- Set its display_type to 'WIRED';
- Set the viewport's shading type to ''Rendered";
- Look at the object in the viewport;
- Navigate and click on "View>Viewport Render Image".